--- a/index.html
+++ b/index.html
@@ -25,49 +25,59 @@
       <img src="images/large/002.jpg">
     </div>
      <!-- A modal -->
-    <div id="img2" style="display:none;">
+    <div id="img3" style="display:none;">
       <p>The Castle</p>
       <img src="images/large/003.jpg">
     </div>     
     <!-- A modal -->
-    <div id="img2" style="display:none;">
+    <div id="img4" style="display:none;">
       <p>The Pink Sunset</p>
       <img src="images/large/004.jpg">
     </div>
     <!-- A modal -->
-    <div id="img2" style="display:none;">
-      <p>The Pink Sunset</p>
-      <img src="images/large/004.jpg">
+    <div id="img5" style="display:none;">
+      <p>The Glaciers</p>
+      <img src="images/large/005.jpg">
     </div>
     <!-- A modal -->
-    <div id="img2" style="display:none;">
-      <p>The Pink Sunset</p>
-      <img src="images/large/004.jpg">
+    <div id="img6" style="display:none;">
+      <p>The Ice</p>
+      <img src="images/large/006.jpg">
     </div>
     <!-- A modal -->
-    <div id="img2" style="display:none;">
-      <p>The Pink Sunset</p>
-      <img src="images/large/004.jpg">
+    <div id="img7" style="display:none;">
+      <p>The Sailing Boat</p>
+      <img src="images/large/007.jpg">
     </div>
     <!-- A modal -->
-    <div id="img2" style="display:none;">
-      <p>The Pink Sunset</p>
-      <img src="images/large/004.jpg">
+    <div id="img8" style="display:none;">
+      <p>The Blue Sea</p>
+      <img src="images/large/008.jpg">
     </div>
     <!-- A modal -->
-    <div id="img2" style="display:none;">
-      <p>The Pink Sunset</p>
-      <img src="images/large/004.jpg">
+    <div id="img9" style="display:none;">
+      <p>The Orange Sunset</p>
+      <img src="images/large/009.jpg">
     </div>
     <!-- A modal -->
-    <div id="img2" style="display:none;">
-      <p>The Pink Sunset</p>
-      <img src="images/large/004.jpg">
+    <div id="img10" style="display:none;">
+      <p>The Dawn</p>
+      <img src="images/large/0010.jpg">
     </div>
     <!-- A modal -->
-    <div id="img2" style="display:none;">
-      <p>The Pink Sunset</p>
-      <img src="images/large/004.jpg">
+    <div id="img11" style="display:none;">
+      <p>The Canyon</p>
+      <img src="images/large/0011.jpg">
+    </div>
+    <!-- A modal -->
+    <div id="img12" style="display:none;">
+      <p>The Beach</p>
+      <img src="images/large/0012.jpg">
+    </div>
+    <!-- A modal -->
+    <div id="img13" style="display:none;">
+      <p>The Deck</p>
+      <img src="images/large/013.jpg">
     </div>
     
     
