--- a/index.html
+++ b/index.html
@@ -94,9 +94,59 @@
       </section>
 
       <section class="gallery">
+        <!-- A modal -->
         <ul class="imageGallery">
           <li><a href="#img1" rel="modal:open"><img src="images/thumbnails/001.jpg"></a></li>
         </ul>
+        <!-- A modal -->
+        <ul class="imageGallery">
+          <li><a href="#img2" rel="modal:open"><img src="images/thumbnails/002.jpg"></a></li>
+        </ul>
+        <!-- A modal -->
+        <ul class="imageGallery">
+          <li><a href="#img3" rel="modal:open"><img src="images/thumbnails/003.jpg"></a></li>
+        </ul>
+        <!-- A modal -->
+        <ul class="imageGallery">
+          <li><a href="#img4" rel="modal:open"><img src="images/thumbnails/004.jpg"></a></li>
+        </ul>
+        <!-- A modal -->
+        <ul class="imageGallery">
+          <li><a href="#img5" rel="modal:open"><img src="images/thumbnails/005.jpg"></a></li>
+        </ul>
+        <!-- A modal -->
+        <ul class="imageGallery">
+          <li><a href="#img6" rel="modal:open"><img src="images/thumbnails/006.jpg"></a></li>
+        </ul>
+        <!-- A modal -->
+        <ul class="imageGallery">
+          <li><a href="#img7" rel="modal:open"><img src="images/thumbnails/007.jpg"></a></li>
+        </ul>
+        <!-- A modal -->
+        <ul class="imageGallery">
+          <li><a href="#img8" rel="modal:open"><img src="images/thumbnails/008.jpg"></a></li>
+        </ul>
+        <!-- A modal -->
+        <ul class="imageGallery">
+          <li><a href="#img9" rel="modal:open"><img src="images/thumbnails/009.jpg"></a></li>
+        </ul>
+        <!-- A modal -->
+        <ul class="imageGallery">
+          <li><a href="#img10" rel="modal:open"><img src="images/thumbnails/010.jpg"></a></li>
+        </ul>
+        <!-- A modal -->
+        <ul class="imageGallery">
+          <li><a href="#img11" rel="modal:open"><img src="images/thumbnails/011.jpg"></a></li>
+        </ul>
+        <!-- A modal -->
+        <ul class="imageGallery">
+          <li><a href="#img12" rel="modal:open"><img src="images/thumbnails/012.jpg"></a></li>
+        </ul>
+        <!-- A modal -->
+        <ul class="imageGallery">
+          <li><a href="#img13" rel="modal:open"><img src="images/thumbnails/013.jpg"></a></li>
+        </ul>
+        
       </section>
 
       <footer class="site-footer">
